<resources>
    <string name="app_name">Zchedule</string>
    <string name="title_activity_time_table">TimeTable</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="ServerKey">SidSparsha</string>

    <string name="appid">ca-app-pub-1777730931585390/4239132461</string>

    <string name="privacyIntroduction">
        Zchedule provides complete information replica of what you see in your
        FFCS. Currently we only provide service to VIT Chennai Campus. Our
        Privacy Policy helps explain our information practices. For Example,
        we talk about information we collect and how this affects you. We also
        explain the steps we take to protect your privacy without compromising
        on the quality of service.

        Whenever we say \'Zchedule\', \'our\', \'we\', we refer to developers of Zchedule
        , Fourth State Lab.

        This Privacy Policy applies only to Zchedule x.x.x .
    </string>

    <string name="privacyInformationCollect">
        Zchedule collects information when we operate and provide information, which is Login and Sync.
    </string>

    <string name="privacyInformationProvide">
        You provide your FFCS account information which includes your Registration number
        and FFCS password only. Zchedule doesn\'t collect any other account information
        either from your phone, or your FFCS automatically other then running semester\'s
        Courses, TimeTable, Attendance and Assignments, not even your name.
    </string>

    <string name="privacyInformationTransfer">
        Your information is transferred to servers within encrypted Basic Authentication headers
        through HTTPS(HTTP with SSL Certificate Validation) protocol using POST method. Hence,
        your Highly confidential credentials can neither be sniffed, tampered or blocked by any
        third party.
    </string>

    <string name="privacyInformationStored">
        Your information is stored nowhere else other then your own personal mobile phone and this
        information can never be accessed by any one, not even you. However, your credentials are
        cached in servers for 3 minutes since your last request to provide faster services. And
        while cached no one can see those information, not even we can see or tamper with that
        information.

        Your information is not logged anywhere, neither on your phone\'s logger nor on server\'s logger.
    </string>

    <string name="privacyInformationUsage">
        Login : When you log-in from giving your credentials, we allocate a server for you to which
        your information will be sent to provide service(in this process your credentials are not used).
        Later, your information is sent to the allocated server, which logs you in using VIT\'s FFCS
        Login Form, and your credentials are now cached for 3 minutes in the server and saved in your
        phone after successful login.

        Syncing : When you open the app for the second time, Zchedule then synchronises your FFCS
        information to your phone following VIT\'s FFCS Login Procedure again. This time your credentials
        are collected from your phone directly which was saved when login.

        We can assure you that, we neither collect or tamper with any information in your FFCS. Our
        sole motive is to directly send you information only about running semester\'s Courses, Time-Table
        , Attendance and Assignments and that\'s all.
    </string>

    <string name="privacyInformationShared">
        Absolutely nothing, we do not share any information with any third party or any other machine
        than our servers. We respect your privacy, which is not to share any information without you
        knowing.
    </string>

    <string name="copyright">
        To report copyright infringement and request that Zchedule App remove any infringement content
        it is hosting, please email to <b>fourthstatelab@gmail.com</b> .
    </string>

    <string name="wangAvl">
        Copyright 2015 jack wang

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
        </string>

    <string name="sothree">
        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this work except in compliance with the License. You may obtain a copy of the License in the LICENSE file, or at:

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
        </string>

    <string name="okhttp">
        Copyright 2016 Square, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        </string>

    <string name="cache">
    Copyright 2012 Jake Wharton
    Copyright 2011 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    </string>

    <string name="google">
    Copyright 2014 Google, Inc. All rights reserved.

    Redistribution and use in source and binary forms, with or without modification, are
    permitted provided that the following conditions are met:

    1. Redistributions of source code must retain the above copyright notice, this list of
    conditions and the following disclaimer.

    2. Redistributions in binary form must reproduce the above copyright notice, this list
    of conditions and the following disclaimer in the documentation and/or other materials
    provided with the distribution.

    THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS\'\' AND ANY EXPRESS OR IMPLIED
    WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
    FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR
    CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
    CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
    ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
    NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
    ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

    The views and conclusions contained in the software and documentation are those of the
    authors and should not be interpreted as representing official policies, either expressed
    or implied, of Google, Inc.
    </string>


    <string name="gson">
        Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
        </string>

    <string name="acceptance">
        Note: By Logging in you agree to our <b><u>Privacy Policy</u></b>.
        </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_moodle">Moodle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
