<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sridh.vdiary.Activities.Privacy">

    <android.support.v7.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/privacyToolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="Introduction"
            android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacyIntroduction"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="Data we collect"
            android:textSize="25sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/privacyInformationCollect"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="Data you provide"
            android:textSize="25sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/privacyInformationProvide"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="How data is transferred?"
            android:textSize="25sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/privacyInformationTransfer"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="Where is the data stored?"
            android:textSize="25sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/privacyInformationStored"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="What do we share?"
            android:textSize="25sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/privacyInformationShared"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:text="Copyright"
            android:textSize="25sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/copyright"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
    </ScrollView>
    </LinearLayout>
