<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sridh.vdiary.Activities.Privacy">

    <android.support.v7.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/licenseToolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardElevation="3dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Google Binaries"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/google"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="com.wang.avi:library:2.1.3"
                    android:textColor="@android:color/black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/wangAvl"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="3dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="com.sothree.slidinguppanel:library:3.3.1"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/sothree"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardElevation="3dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="com.github.bumptech.glide:glide.diskurlcache:3.7.0"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/cache"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardElevation="3dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="com.google.code.gson:gson:2.2.4"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@string/gson"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
